new function: complete the person bk function, so we bk db to every where....!!!!